--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.app-container {
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+
+/*
 .App {
   text-align: center;
 }
@@ -36,3 +43,4 @@
     transform: rotate(360deg);
   }
 }
+*/
