--- a/src/components/ProductCard/style.css
+++ b/src/components/ProductCard/style.css
@@ -3,6 +3,9 @@
     flex-direction: column;
     align-items: center;
     width: 300px;
+    height: 300px;
+    padding: 20px;
+    box-sizing: border-box;
     text-align: center;
     cursor: pointer;
 }
