--- a/src/containers/AllProductsPage/style.css
+++ b/src/containers/AllProductsPage/style.css
@@ -1,13 +1,21 @@
 .all-products-page-container {
     display: flex;
-    flex-wrap: wrap;
+    font-family: Arial, Helvetica, sans-serif;
     margin-top: 100px;
+    width: 100%;
+}
+
+.all-products-container {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .all-products-page-container .product-item-container {
-    flex-basis: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 100px;
+    margin-right: 40px;
+    margin-left: 40px;
+    height: 300px;
 }
