--- a/src/containers/AllProductsPage/style.css
+++ b/src/containers/AllProductsPage/style.css
@@ -3,9 +3,16 @@
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 100px;
     width: 100%;
+    margin-bottom: 100px;
 }
 
 .all-products-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.all-products-page-container .all-products {
     display: flex;
     flex-wrap: wrap;
 }
