Add ProductCardModal components & refactor working project version

--- a/src/ui-components/Button/style.css
+++ b/src/ui-components/Button/style.css
@@ -34,3 +34,10 @@
 .btn-default:hover, .btn-default.selected {
     background-color: #b3b3b3;
 }
+
+.btn.disabled {
+    background-color: #EBEBE4;
+    color: #C6C6C6;
+    cursor: not-allowed;
+    transform: scale(1);
+}
