Add SSR implementation & refactor working project version

--- a/src/containers/HomePage/style.css
+++ b/src/containers/HomePage/style.css
@@ -1,5 +1,5 @@
 .homepage-container .cover-image {
-    background-image: url('http://localhost:3000/coverimage.JPG');
+    background-image: url('http://localhost:1234/public/homepage/coverimage.JPG');
     height: 800px;
     background-repeat: no-repeat;
     background-size: cover;
