--- a/src/components/HeaderNavigation/style.css
+++ b/src/components/HeaderNavigation/style.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     height: 70px;
+    width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
 }
