--- a/src/components/Partners/style.css
+++ b/src/components/Partners/style.css
@@ -26,13 +26,13 @@
 }
 
 .partners-list .amazon {
-    background-image: url("http://localhost:1234/public/homepage/amazon.JPG");
+    background-image: url('https://shopspree-app-server.herokuapp.com/public/homepage/amazon.JPG');
 }
 
 .partners-list .shopify {
-    background-image: url("http://localhost:1234/public/homepage/shopify.JPG");
+    background-image: url('https://shopspree-app-server.herokuapp.com/public/homepage/shopify.JPG');
 }
 
 .partners-list .wix {
-    background-image: url("http://localhost:1234/public/homepage/wix.JPG");
+    background-image: url('https://shopspree-app-server.herokuapp.com/public/homepage/wix.JPG');
 }
