--- a/src/components/ShopQuality/style.css
+++ b/src/components/ShopQuality/style.css
@@ -28,13 +28,13 @@
 }
 
 .shop-quality-container .support-local {
-    background-image: url("http://localhost:1234/public/homepage/support-local.JPG");
+    background-image: url('https://shopspree-app-server.herokuapp.com/public/homepage/support-local.jpg');
 }
 
 .shop-quality-container .high-quality {
-    background-image: url("http://localhost:1234/public/homepage/high-quality.JPG");
+    background-image: url('https://shopspree-app-server.herokuapp.com/public/homepage/high-quality.jpg');
 }
 
 .shop-quality-container .eco-friendly {
-    background-image: url("http://localhost:1234/public/homepage/eco-friendly.JPG");
+    background-image: url('https://shopspree-app-server.herokuapp.com/public/homepage/eco-friendly.jpg');
 }
