--- a/src/containers/HomePage/style.css
+++ b/src/containers/HomePage/style.css
@@ -1,5 +1,5 @@
 .homepage-container .cover-image {
-    background-image: url('http://localhost:1234/public/homepage/coverimage.JPG');
+    background-image: url('https://shopspree-app-server.herokuapp.com/public/homepage/coverimage.JPG');
     max-height: 800px;
     height: 800px;
     width: 100%;
